fixed positioning and some overflow

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,14 @@
+html {
+    margin: auto;
+    overflow-x: hidden;
+}
+
 body {
     background: linear-gradient(160deg, white, rgb(70, 70, 242), rgb(80, 80, 224), rgb(200, 200, 234));
     font-family: 'Metrophobic', 'Nunito', 'Merriweather', 'Arial';
-    margin: auto;
+    margin: 0;
     width: 100%;
+    height: 100%;
 }
 
 nav {
@@ -14,10 +20,11 @@ nav {
     position: fixed;
     top: 0;
     z-index: 1;
+    padding: auto;
 }
 
 .navbar {
-    margin: 0px;
+    margin: auto;
 }
 
 .navoptions {
@@ -49,7 +56,6 @@ nav {
 }
 
 #navimg {
-    padding-top: 5px;
     margin: auto;
     display: inline-block;
     width: 3%;
@@ -57,15 +63,15 @@ nav {
 
 .header {
     position: relative;
-    margin-top: 55px auto;
-    padding: 10px;
+    padding-top: 50px;
+    padding-left: 32px;
 }
 
 #header-img {
     aspect-ratio: 16 / 9;
     display: flex;
     position: relative;
-    width: 70%;
+    max-width: 70%;
     object-fit: cover;
     vertical-align: baseline;
     box-shadow: 0 1.5rem 3rem -0.72rem hsla(0, 0%, 0%, 0.25);
@@ -94,6 +100,7 @@ nav {
     display: block;
     background-color: rgba(143, 227, 255, 40%);
     width: 100%;
+    padding: 32px 0px 32px 32px;
 }
 
 .description-text {
@@ -105,16 +112,18 @@ nav {
 
 .description img {
     display: inline-block;
-    width: 50%;
     flex: 1;
     margin: auto;
     object-fit: contain;
+    position: relative;
+    width: 50%;
+    height: auto;
 }
 
 .Menu {
     background-color: rgba(77, 134, 153, 40%);
     margin: auto;
-    padding: 10px;
+    padding: 32px;
 }
 
 .Menu .menu-item {
@@ -122,7 +131,7 @@ nav {
 }
 
 .Gallery {
-    padding: 2rem;
+    padding: 32px;
     width: 100%;
 }
 
@@ -178,6 +187,7 @@ nav {
     flex: 1;
     margin-top: 100px;
     margin-bottom: 120px;
+    padding: 32px;
 }
 
 .Contact {
